basically a million times better

--- a/web/offload.html
+++ b/web/offload.html
@@ -80,5 +80,7 @@
     var csvContent = lines.join("");
     var encodedUri = encodeURI(csvContent);
     window.open(encodedUri);
+    data = new Array(90000);
+    spot = 0;
   }
 </script>
