--- a/web/offload.html
+++ b/web/offload.html
@@ -55,8 +55,12 @@
   import matplotlib.pyplot as plt
   import pandas as pd 
   import asyncio
+  import math
   import os
   from io import StringIO
+  import warnings
+
+ 
 
   async def process_file(event):
   
@@ -70,8 +74,41 @@
   #process_file_proxy = create_proxy(process_file)
   
   def plotmat(df):
-  
     df.columns = ['raw_acc_x', 'raw_acc_y', 'raw_acc_z', 'raw_gyr_x', 'raw_gyr_y', 'raw_gyr_z','raw_pressure','time'];
+    df['data_start'] = df.apply(lambda x: 0, axis=1)
+    for i in range(0,len(df['time'])-1): 
+        if df['time'].iloc[i+1]< df['time'].iloc[i]:
+            df['data_start'].iloc[i+1] = 1
+    s = df.index[df['data_start'] == 1].tolist()
+    start = 0
+    end = 0
+    temp = 0
+    interval = 0;
+    #pick longest interval 
+    for j in range(0, len(s)): 
+                interval = end - start
+                temp = s[j] 
+                if temp - end > interval:
+                    start = end
+                    end = temp
+                    interval = end - start
+    if(len(df)-end > interval):
+        start = end
+        end = len(df)             
+
+    df_edited = df[start:end] #keep longest interval 
+    
+    warnings.filterwarnings("ignore")
+    df_edited.drop('data_start', axis=1,inplace=True)
+    #Format Units 
+    df_edited['time'] = df_edited['time'].apply(lambda x: x/math.pow(10, 6)) #us to s 
+    df_edited['time'] = df_edited['time'].apply(lambda x: x - df_edited['time'].iloc[0])
+    df_edited['raw_acc_x'] = df_edited['raw_acc_x'].apply(lambda x: x*9.80665)
+    df_edited['raw_acc_y'] = df_edited['raw_acc_y'].apply(lambda x: x*9.80665)
+    df_edited['raw_acc_z'] = df_edited['raw_acc_z'].apply(lambda x: x*9.80665) #convert to SI 
+    df_edited['raw_pressure'] = df_edited['raw_pressure'].apply(lambda x: x*100) #HPa to Pa
+    df = df_edited
+    
     filename = document.getElementById("myfile").value
     filename = filename.split("\\")
     filename = filename[len(filename) - 1]
